--- a/index.html
+++ b/index.html
@@ -137,28 +137,48 @@
                 <h3><span>1</span> Increase Access</h3>
                 <p>
                   Provide affordable reading glasses to at least 100,000 people
-                  in rural and peri-urban Uganda by 2030.
+                  in rural and peri-urban Uganda by 2030, focusing on
+                  communities with limited access to vision care services.
                 </p>
               </div>
               <div class="objective-card">
                 <h3><span>2</span> Raise Awareness</h3>
                 <p>
                   Conduct targeted vision health education campaigns to
-                  demystify presbyopia and reduce stigma.
+                  demystify presbyopia, reduce stigma, and promote early
+                  self-diagnosis using digital and offline tools.
                 </p>
               </div>
               <div class="objective-card">
                 <h3><span>3</span> Empower Local Champions</h3>
                 <p>
-                  Train and deploy community health workers to lead outreach in
+                  Train and deploy community health workers and local champions
+                  to lead outreach, screenings, and follow-up support in
                   hard-to-reach areas.
                 </p>
               </div>
               <div class="objective-card">
                 <h3><span>4</span> Ensure Affordability</h3>
                 <p>
-                  Implement hire purchase and mobile money platforms to reduce
-                  financial barriers.
+                  Implement a hire purchase model and mobile money platforms to
+                  reduce financial barriers to vision correction.
+                </p>
+              </div>
+              <div class="objective-card">
+                <h3><span>5</span> Strengthen Local Systems</h3>
+                <p>
+                  Integrate reading glasses into existing health delivery
+                  structures, including drug shops, clinics, and local
+                  businesses, to build a sustainable and replicable distribution
+                  model.
+                </p>
+              </div>
+              <div class="objective-card">
+                <h3><span>6</span>Monitor Impact</h3>
+                <p>
+                  Continuously measure the initiative’s outcomes using key
+                  metrics such as reduction in untreated presbyopia, improved
+                  productivity, and Quality-Adjusted Life Years (QALYs) gained.
                 </p>
               </div>
             </div>
@@ -175,10 +195,7 @@
           <div class="program-card">
             <div
               class="program-img"
-              style="
-                background: url('https://images.unsplash.com/photo-1579684385127-1ef15d508118?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80')
-                  center/cover;
-              "
+              style="background: url('/img/glasses.jpg') center/cover"
             ></div>
             <div class="program-content">
               <h3>Community Outreach Clinics</h3>
@@ -194,10 +211,7 @@
           <div class="program-card">
             <div
               class="program-img"
-              style="
-                background: url('https://images.unsplash.com/photo-1581578021233-92ad4e2b0ed2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80')
-                  center/cover;
-              "
+              style="background: url('/img/eyeglass.jpg') center/cover"
             ></div>
             <div class="program-content">
               <h3>Eye Care Services</h3>
@@ -213,10 +227,7 @@
           <div class="program-card">
             <div
               class="program-img"
-              style="
-                background: url('https://images.unsplash.com/photo-1523240795612-9a054b0db644?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80')
-                  center/cover;
-              "
+              style="background: url('/img/glasshp.jpg') center/cover"
             ></div>
             <div class="program-content">
               <h3>Health Education</h3>
@@ -264,26 +275,26 @@
         <div class="gallery-grid">
           <div class="gallery-item">
             <img
-              src="https://images.unsplash.com/photo-1581578021527-9a47b7daf0f6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
-              alt="Community Outreach"
+              src="https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
+              alt="Santé Initiative"
             />
           </div>
           <div class="gallery-item">
             <img
               src="https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
-              alt="Vision Screening"
+              alt="Santé Initiative"
             />
           </div>
           <div class="gallery-item">
             <img
-              src="https://images.unsplash.com/photo-1629909613657-27f26a6148e3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
-              alt="Health Education"
+              src="https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
+              alt="Santé Initiative"
             />
           </div>
           <div class="gallery-item">
             <img
-              src="https://images.unsplash.com/photo-1584308666744-24d5c474f2ae?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
-              alt="Glasses Distribution"
+              src="https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
+              alt="Santé Initiative"
             />
           </div>
         </div>
