--- a/index.html
+++ b/index.html
@@ -353,6 +353,79 @@
         </div>
       </div>
     </section>
+    <!-- Contact Section -->
+    <section class="section" id="contact">
+      <div class="container contact-container">
+        <!-- Contact Form -->
+        <div class="contact-column contact-form">
+          <h2>Contact Us</h2>
+          <p>Contact Us by filling this form below</p>
+          <form action="send.php" method="POST">
+            <label for="name">Name*</label>
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="Your Name"
+              required
+            />
+
+            <label for="email">Email*</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="example@gmail.com"
+              required
+            />
+
+            <label for="subject">Subject*</label>
+            <input
+              type="text"
+              id="subject"
+              name="subject"
+              placeholder="Subject"
+              required
+            />
+
+            <label for="message">Message</label>
+            <textarea
+              id="message"
+              name="message"
+              rows="4"
+              placeholder="Your message here..."
+              required
+            ></textarea>
+
+            <button type="submit">Send</button>
+          </form>
+        </div>
+
+        <!-- Contact Info -->
+        <div class="contact-column contact-info">
+          <h2>Location</h2>
+          <p><span class="icon">📍</span> Kampala, Uganda</p>
+          <p><span class="icon">📞</span> +256 758 000280</p>
+          <p><span class="icon">✉️</span> info@santeinitiative.org</p>
+          <p><span class="icon">💬</span> +256 702 612079</p>
+          <p><span class="icon">📱</span> +256 775 081034</p>
+        </div>
+
+        <!-- Map Embed -->
+        <div class="contact-column contact-map">
+          <h2>Map</h2>
+          <iframe
+            src="https://www.google.com/maps?q=Kampala,+Uganda&output=embed"
+            width="100%"
+            height="100%"
+            style="border: 0; min-height: 300px"
+            allowfullscreen=""
+            loading="lazy"
+          >
+          </iframe>
+        </div>
+      </div>
+    </section>
     <div
       id="qlwapp"
       class="qlwapp-free qlwapp-button qlwapp-bottom-right qlwapp-all qlwapp-square qlwapp-js-ready desktop"
@@ -376,7 +449,7 @@
       </div>
     </div>
     <!-- Footer -->
-    <footer class="footer" id="contact">
+    <footer class="footer">
       <div class="container">
         <div class="footer-content">
           <div class="footer-column">
