site always shows the correct year without manual updates

--- a/index.html
+++ b/index.html
@@ -499,7 +499,10 @@
           </div>
         </div>
         <div class="copyright">
-          <p>&copy; 2025 Santé Initiative. All Rights Reserved.</p>
+          <p>
+            &copy; <span id="year"></span> Santé Initiative. All Rights
+            Reserved.
+          </p>
         </div>
       </div>
     </footer>
