i have first removed the donor page

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#get-involved">Get Involved</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li></li>
         </ul>
-        <a href="#donate" class="btn btn-secondary">Donate</a>
+        <!-- <a href="#donate" class="btn btn-secondary">Donate</a> -->
       </nav>
 
       <!-- Mobile Navigation Toggle -->
@@ -75,8 +76,9 @@
         <li><a href="#gallery">Gallery</a></li>
         <li><a href="#get-involved">Get Involved</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li></li>
       </ul>
-      <a href="#donate" class="btn btn-secondary">Donate Now</a>
+      <!-- <a href="#donate" class="btn btn-secondary">Donate Now</a> -->
     </div>
     <div class="menu-overlay" id="menuOverlay"></div>
 
@@ -346,7 +348,10 @@
               Partner with us to expand our reach and create sustainable impact
               together.
             </p>
-            <a href="#" class="btn btn-outline" style="margin-top: 1.5rem"
+            <a
+              href="#contact"
+              class="btn btn-outline"
+              style="margin-top: 1.5rem"
               >Partner With Us</a
             >
           </div>
