--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#get-involved">Get Involved</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li></li>
         </ul>
         <!-- <a href="#donate" class="btn btn-secondary">Donate</a> -->
       </nav>
@@ -409,7 +408,10 @@
         <!-- Contact Info -->
         <div class="contact-column contact-info">
           <h2>Location</h2>
-          <p><span class="icon">📍</span> Kampala, Uganda</p>
+          <p>
+            <span class="icon">📍</span>158652 Kampala GPO,Kakungulu
+            Road,Ambassador close,Kalinabiri,Uganda
+          </p>
           <p><span class="icon">📞</span> +256 758 000280</p>
           <p><span class="icon">✉️</span> info@santeinitiative.org</p>
           <p><span class="icon">💬</span> +256 702 612079</p>
@@ -420,14 +422,14 @@
         <div class="contact-column contact-map">
           <h2>Map</h2>
           <iframe
-            src="https://www.google.com/maps?q=Kampala,+Uganda&output=embed"
-            width="100%"
-            height="100%"
-            style="border: 0; min-height: 300px"
+            src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3714.423487193278!2d32.57880507389356!3d0.31377199212433343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1skakungulu%20road%20road%20ambassador%20close!5e1!3m2!1sen!2sug!4v1750943789060!5m2!1sen!2sug"
+            width="600"
+            height="450"
+            style="border: 0"
             allowfullscreen=""
             loading="lazy"
-          >
-          </iframe>
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </div>
       </div>
     </section>
@@ -486,7 +488,7 @@
             <ul class="contact-info">
               <li>
                 <i class="fas fa-map-marker-alt"></i>
-                <span> Kampala, Uganda</span>
+                <span> Kakungulu Road,Ambassador close,Kalinabiri,Uganda</span>
               </li>
               <li>
                 <i class="fas fa-phone-alt"></i>
