--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Santé Initiative - Vision Care for Uganda</title>
+    <title>Sante Initiative - Vision Care for Uganda</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -43,7 +43,7 @@
     <header class="header">
       <div class="logo">
         <a href="index.html"
-          ><img src="img/logo.png" alt="Santé Initiative"
+          ><img src="img/logo.png" alt="Sante Initiative"
         /></a>
       </div>
 
@@ -87,7 +87,7 @@
         <div class="hero-content">
           <h1>Restoring Vision, Transforming Lives</h1>
           <p>
-            Santé Initiative is dedicated to providing affordable, quality
+            Sante Initiative is dedicated to providing affordable, quality
             vision care to underserved communities across Uganda.
           </p>
           <div class="hero-btns">
@@ -460,7 +460,7 @@
       <div class="container">
         <div class="footer-content">
           <div class="footer-column">
-            <h3>Santé Initiative</h3>
+            <h3>Sante Initiative</h3>
             <p>
               Restoring and enhancing vision among underserved communities in
               Uganda through affordable, high-quality care and innovative
@@ -507,7 +507,7 @@
         </div>
         <div class="copyright">
           <p>
-            &copy; <span id="year"></span> Santé Initiative. All Rights
+            &copy; <span id="year"></span> Sante Initiative. All Rights
             Reserved.
           </p>
         </div>
