--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <!-- Contact Form -->
         <div class="contact-column contact-form">
           <h2>Contact Us</h2>
-          <p>Contact Us by filling this form below</p>
+          <p>Reach Us by filling this form below</p>
           <form action="send.php" method="POST">
             <label for="name">Name*</label>
             <input
