i have added the meta tags for the sante initiative website

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta
+      name="title"
+      content="Sante Initiative | Access to Affordable Vision Care in Uganda"
+    />
+    <meta
+      name="description"
+      content="Sante Initiative is a Ugandan NGO dedicated to restoring and enhancing vision in underserved communities by providing affordable, high-quality reading glasses and eye care outreach."
+    />
+    <meta
+      name="keywords"
+      content="Sante Initiative, vision care, reading glasses Uganda, NGO health, affordable eye care, community outreach, presbyopia"
+    />
+    <meta name="author" content="Daniel Kabagambe, danielkabagambe@gmail.com" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@399&display=swap"
       rel="stylesheet"
