font-family: "Cormorant Garamond", serif;

--- a/index.html
+++ b/index.html
@@ -106,16 +106,7 @@
           </p>
           <div class="hero-btns">
             <a href="#get-involved" class="btn btn-primary">Get Involved</a>
-            <a
-              href="#about"
-              class="btn btn-outline"
-              style="
-                background: rgba(255, 255, 255, 0.1);
-                color: white;
-                border-color: white;
-              "
-              >Learn More</a
-            >
+            <a href="#about" class="btn btn-outline">Learn More</a>
           </div>
         </div>
       </div>
