edited the whatsapp icon

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
               type="email"
               id="email"
               name="email"
-              placeholder="example@gmail.com"
+              placeholder="youremail@gmail.com"
               required
             />
 
