© 2025 Sante Initiative. All Rights Reserved.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       content="Sante Initiative, vision care, reading glasses Uganda, NGO health, affordable eye care, community outreach, presbyopia"
     />
     <meta name="author" content="Daniel Kabagambe, danielkabagambe@gmail.com" />
-
+    <!-- Canonical URL (SEO) -->
+    <link rel="canonical" href="https://santeinitiative.org/" />
     <link
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@399&display=swap"
       rel="stylesheet"
