Our Impact Gallery

--- a/index.html
+++ b/index.html
@@ -281,28 +281,16 @@
         <h2>Our Impact Gallery</h2>
         <div class="gallery-grid">
           <div class="gallery-item">
-            <img
-              src="https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
-              alt="Santé Initiative"
-            />
+            <img src="/img/glas1.jpeg" alt="Santé Initiative" />
           </div>
           <div class="gallery-item">
-            <img
-              src="https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
-              alt="Santé Initiative"
-            />
+            <img src="/img/glas4.jpeg" alt="Santé Initiative" />
           </div>
           <div class="gallery-item">
-            <img
-              src="https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
-              alt="Santé Initiative"
-            />
+            <img src="/img/glas5.jpeg" alt="Santé Initiative" />
           </div>
           <div class="gallery-item">
-            <img
-              src="https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
-              alt="Santé Initiative"
-            />
+            <img src="/img/glas6.jpeg" alt="Santé Initiative" />
           </div>
         </div>
       </div>
