--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#programs">Programs</a></li>
-          <li><a href="#gallery">Gallery</a></li>
+          <li><a href="#gallery">Glasses</a></li>
           <li><a href="#get-involved">Get Involved</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -87,7 +87,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About Us</a></li>
         <li><a href="#programs">Programs</a></li>
-        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#gallery">Glasses</a></li>
         <li><a href="#get-involved">Get Involved</a></li>
         <li><a href="#contact">Contact</a></li>
         <li></li>
@@ -278,7 +278,7 @@
     <!-- Gallery Section -->
     <section class="gallery" id="gallery">
       <div class="container">
-        <h2>Our Impact Gallery</h2>
+        <h2>Browse Eyewear</h2>
         <div class="gallery-grid">
           <div class="gallery-item">
             <img src="/img/glas1.jpeg" alt="Santé Initiative" />
@@ -457,7 +457,7 @@
               <li><a href="#home">Home</a></li>
               <li><a href="#about">About Us</a></li>
               <li><a href="#programs">Programs</a></li>
-              <li><a href="#gallery">Gallery</a></li>
+              <li><a href="#gallery">Glasses</a></li>
               <li><a href="#get-involved">Get Involved</a></li>
             </ul>
           </div>
