--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     <!-- Gallery Section -->
     <section class="gallery" id="gallery">
       <div class="container">
-        <h2>Browse Eyewear</h2>
+        <h2>Explore Collection</h2>
         <div class="gallery-grid">
           <div class="gallery-item">
             <img src="/img/glas1.jpeg" alt="Santé Initiative" />
