--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
     <section class="hero" id="home">
       <div class="container">
         <div class="hero-content">
-          <h1>Restoring Vision, Transforming Lives</h1>
+          <h1>Sante Initiative</h1>
           <p>
             Sante Initiative is dedicated to providing affordable, quality
             vision care to underserved communities across Uganda.
           </p>
-          <div class="hero-btns">
+          <!-- <div class="hero-btns">
             <a href="#get-involved" class="btn btn-primary">Get Involved</a>
             <a href="#about" class="btn btn-outline">Learn More</a>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
