a small JavaScript snippet that runs when the page loads to animate each number.

--- a/index.html
+++ b/index.html
@@ -252,23 +252,24 @@
     </section>
 
     <!-- Stats Section -->
+
     <section class="stats">
       <div class="container">
         <div class="stats-grid">
           <div class="stat-item">
-            <div class="stat-number">15,000+</div>
+            <div class="stat-number" data-target="15000">0</div>
             <div class="stat-text">People Served</div>
           </div>
           <div class="stat-item">
-            <div class="stat-number">120+</div>
+            <div class="stat-number" data-target="120">0</div>
             <div class="stat-text">Communities Reached</div>
           </div>
           <div class="stat-item">
-            <div class="stat-number">85%</div>
+            <div class="stat-number" data-target="85">0</div>
             <div class="stat-text">Women Beneficiaries</div>
           </div>
           <div class="stat-item">
-            <div class="stat-number">2030</div>
+            <div class="stat-number" data-target="2030">0</div>
             <div class="stat-text">Impact Goal</div>
           </div>
         </div>
