--- a/index.html
+++ b/index.html
@@ -102,8 +102,11 @@
         <div class="hero-content">
           <h1>Sante Initiative</h1>
           <p>
-            Sante Initiative is dedicated to providing affordable, quality
-            vision care to underserved communities across Uganda.
+            To increase access to reading glasses for people with presbyopia in
+            Uganda through
+            <strong>awareness campaigns</strong>,
+            <strong>accessible diagnostic tools</strong>, and
+            <strong>quality-assured distribution</strong>.
           </p>
           <!-- <div class="hero-btns">
             <a href="#get-involved" class="btn btn-primary">Get Involved</a>
@@ -193,7 +196,59 @@
         </div>
       </div>
     </section>
-
+    <!-- Add this below the mission statement -->
+    <div class="distribution-model">
+      <h2>Our Distribution Approach</h2>
+      <div class="distribution-steps">
+        <div class="step">
+          <span class="step-number">1</span>
+          <h3>Community Awareness</h3>
+          <p>
+            Educational sessions and materials about presbyopia for health
+            workers and communities
+          </p>
+        </div>
+        <div class="step">
+          <span class="step-number">2</span>
+          <h3>Accessible Diagnostics</h3>
+          <p>
+            Mobile apps with Snellen charts and self-testing options through
+            smartphones
+          </p>
+        </div>
+        <div class="step">
+          <span class="step-number">3</span>
+          <h3>Quality Assurance</h3>
+          <p>
+            Rigorous quality control and periodic audits of prescription
+            compliance
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- Add this below the gallery section -->
+    <section class="glasses-info">
+      <div class="container">
+        <h2>Our Reading Glasses</h2>
+        <div class="glasses-features">
+          <div class="feature">
+            <i class="fas fa-ruler-combined"></i>
+            <h3>Available Strengths</h3>
+            <p>+1.00 to +3.50 in 0.25 increments</p>
+          </div>
+          <div class="feature">
+            <i class="fas fa-shield-alt"></i>
+            <h3>Quality Materials</h3>
+            <p>Scratch-resistant lenses with UV protection</p>
+          </div>
+          <div class="feature">
+            <i class="fas fa-tags"></i>
+            <h3>Affordable Pricing</h3>
+            <p>Starting at 10,000 UGX with flexible payment options</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Programs Section -->
     <section class="programs" id="programs">
       <div class="container">
@@ -202,13 +257,15 @@
           <div class="program-card">
             <div
               class="program-img"
-              style="background: url('/img/glasses.jpg') center/cover"
+              style="
+                background: url('/img/presbyopic-eye-diagram.webp') center/cover;
+              "
             ></div>
             <div class="program-content">
-              <h3>Community Outreach Clinics</h3>
+              <h3>Presbyopia Awareness</h3>
               <p>
-                Bringing vision care directly to remote villages through mobile
-                clinics and health camps.
+                Community education and informational materials to demystify
+                vision challenges
               </p>
               <a href="#" class="btn btn-outline" style="margin-top: 1rem"
                 >Learn More</a
@@ -218,13 +275,14 @@
           <div class="program-card">
             <div
               class="program-img"
-              style="background: url('/img/eyeglass.jpg') center/cover"
+              style="background: url('/img/mobile.jpg') center/cover"
             ></div>
             <div class="program-content">
-              <h3>Eye Care Services</h3>
+              <h3>Mobile Diagnostics</h3>
+              <p></p>
               <p>
-                Comprehensive eye examinations and affordable reading glasses
-                for presbyopia.
+                Accessible vision testing through smartphone apps and community
+                tools
               </p>
               <a href="#" class="btn btn-outline" style="margin-top: 1rem"
                 >Learn More</a
@@ -234,13 +292,13 @@
           <div class="program-card">
             <div
               class="program-img"
-              style="background: url('/img/glasshp.jpg') center/cover"
+              style="background: url('/img/radio.jpg') center/cover"
             ></div>
             <div class="program-content">
-              <h3>Health Education</h3>
+              <h3>Quality Distribution</h3>
               <p>
-                Workshops and campaigns to raise awareness about vision health
-                and eye care.
+                Verified distribution of reading glasses through trusted local
+                channels
               </p>
               <a href="#" class="btn btn-outline" style="margin-top: 1rem"
                 >Learn More</a
@@ -255,22 +313,19 @@
 
     <section class="stats">
       <div class="container">
+        <h2>Targets</h2>
         <div class="stats-grid">
           <div class="stat-item">
-            <div class="stat-number" data-target="15000">0</div>
-            <div class="stat-text">People Served</div>
+            <div class="stat-number" data-target="500">0</div>
+            <div class="stat-text">Pilot Beneficiaries</div>
           </div>
           <div class="stat-item">
-            <div class="stat-number" data-target="120">0</div>
-            <div class="stat-text">Communities Reached</div>
+            <div class="stat-number" data-target="500">0</div>
+            <div class="stat-text">Glasses to Distribute</div>
           </div>
           <div class="stat-item">
-            <div class="stat-number" data-target="85">0</div>
-            <div class="stat-text">Women Beneficiaries</div>
-          </div>
-          <div class="stat-item">
-            <div class="stat-number" data-target="2030">0</div>
-            <div class="stat-text">Impact Goal</div>
+            <div class="stat-number" data-target="100">0</div>
+            <div class="stat-text">Communities to Serve</div>
           </div>
         </div>
       </div>
