Our Distribution Approach

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
+          <li><a href="#approach">Approach</a></li>
           <li><a href="#programs">Programs</a></li>
           <li><a href="#gallery">Glasses</a></li>
           <li><a href="#get-involved">Get Involved</a></li>
@@ -197,35 +198,45 @@
       </div>
     </section>
     <!-- Add this below the mission statement -->
-    <div class="distribution-model">
+
+    <div class="distribution-model" id="approach">
       <h2>Our Distribution Approach</h2>
       <div class="distribution-steps">
         <div class="step">
           <span class="step-number">1</span>
           <h3>Community Awareness</h3>
           <p>
-            Educational sessions and materials about presbyopia for health
-            workers and communities
+            As part of the 2024A Reading Glasses Challenge in Uganda, launched
+            on June 17, 2025, Sante Initiative is committed to increasing access
+            to non-prescription reading glasses. We raise awareness about
+            presbyopia by conducting educational sessions for health workers and
+            community members, and by developing informational materials such as
+            pamphlets, videos, and online content.
           </p>
         </div>
         <div class="step">
           <span class="step-number">2</span>
           <h3>Accessible Diagnostics</h3>
           <p>
-            Mobile apps with Snellen charts and self-testing options through
-            smartphones
+            To reach those in need, we utilize mobile apps with Snellen charts
+            and offer self-testing options for individuals with smartphones.
+            These diagnostic tools are also distributed to community drug shops
+            and clinics to help identify those with presbyopia more easily.
           </p>
         </div>
         <div class="step">
           <span class="step-number">3</span>
           <h3>Quality Assurance</h3>
           <p>
-            Rigorous quality control and periodic audits of prescription
-            compliance
+            We ensure quality by providing high-standard reading glasses and
+            conducting periodic audits to confirm that prescriptions meet the
+            required guidelines. This guarantees that recipients get effective,
+            safe visual aids that truly improve their livelihoods.
           </p>
         </div>
       </div>
     </div>
+
     <!-- Add this below the gallery section -->
     <section class="glasses-info">
       <div class="container">
@@ -512,6 +523,7 @@
             <ul class="footer-links">
               <li><a href="#home">Home</a></li>
               <li><a href="#about">About Us</a></li>
+              <li><a href="#approach">Approach</a></li>
               <li><a href="#programs">Programs</a></li>
               <li><a href="#gallery">Glasses</a></li>
               <li><a href="#get-involved">Get Involved</a></li>
